--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ar.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ar.properties
@@ -7477,6 +7477,7 @@ retry-jitter=تشوش إعادة المحاولة
 retry-jitter-help=قم بتعيينه على صواب لإضافة تشوش (انتظار عشوائي إضافي) لإعادة محاولة المكالمات.
 retry-timeout=مهلة إعادة المحاولة
 retry-timeout-description=تعيين الوقت بالثواني لحظر الطلبات بعد الوصول إلى الحد الخاص بالمحاولات الفاشلة المسموح بها.
+reverse-object-relationships-cannot-be-updated=Reverse object relationships cannot be updated. (Automatic Copy)
 revert-and-create-publication=إلغاء وإنشاء منشور
 revert-your-changes-to-production-immediately=التراجع عن تغييراتك إلى الإنتاج على الفور.
 reverting-creates-a-new-publication-with-the-reverted-changes=يؤدي الإلغاء إلى إنشاء منشور جديد يتضمن التغييرات الملغاة، ولكنه لا ينشر التغييرات. يمكنك إجراء تغييرات إضافية قبل نشر الإلغاءات.
