--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_bg.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_bg.properties
@@ -7477,6 +7477,7 @@ retry-jitter=Опитай пърхане (Automatic Translation)
 retry-jitter-help=Задайте на true, за да добавите нерви (допълнителни случайни изчакване) за повторен опит повиквания. (Automatic Translation)
 retry-timeout=Повторен опит за изчакване на изчакване (Automatic Translation)
 retry-timeout-description=Задайте времето в секунди, за да блокирате заявките след достигане на лимита за неуспешни опити. (Automatic Translation)
+reverse-object-relationships-cannot-be-updated=Reverse object relationships cannot be updated. (Automatic Copy)
 revert-and-create-publication=Връщане и създаване на публикация (Automatic Translation)
 revert-your-changes-to-production-immediately=Върнете незабавно промените си в производството. (Automatic Translation)
 reverting-creates-a-new-publication-with-the-reverted-changes=Връщането създава нова публикация с върнатите промени, но не публикува промените. Можете да направите допълнителни промени, преди да публикувате връщането. (Automatic Translation)
