--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ca.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ca.properties
@@ -7477,6 +7477,7 @@ retry-jitter=Reintenta el jitter
 retry-jitter-help=Establiu en cert per afegir un jitter (espera aleatòria addicional) per als reintents de crida.
 retry-timeout=Temps d'espera del reintent
 retry-timeout-description=Defineix el temps en segons que ha d'esperar un usuari abans de poder tornar a intentar un inici de sessió quan ha fallat.
+reverse-object-relationships-cannot-be-updated=Reverse object relationships cannot be updated. (Automatic Copy)
 revert-and-create-publication=Reverteix i crea la publicació
 revert-your-changes-to-production-immediately=Reverteix els canvis a producció immediatament.
 reverting-creates-a-new-publication-with-the-reverted-changes=Revertir crea una publicació nova amb els canvis revertits, però no publica els canvis. Podeu fer canvis addicionals abans de publicar la reversió.
