--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_cs.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_cs.properties
@@ -7477,6 +7477,7 @@ retry-jitter=Opakovat chvění (Automatic Translation)
 retry-jitter-help=Chcete-li přidat jitter (další náhodné čekání) pro opakování volání, nastavte hodnotu true. (Automatic Translation)
 retry-timeout=Časový limit opakování (Automatic Translation)
 retry-timeout-description=Nastavte čas v sekundách tak, aby blokoval požadavky po dosažení limitu pro povolené neúspěšné pokusy. (Automatic Translation)
+reverse-object-relationships-cannot-be-updated=Reverse object relationships cannot be updated. (Automatic Copy)
 revert-and-create-publication=Vrátit a vytvořit publikaci (Automatic Translation)
 revert-your-changes-to-production-immediately=Okamžitě vraťte změny do produkčního prostředí. (Automatic Translation)
 reverting-creates-a-new-publication-with-the-reverted-changes=Vrácením vytvoří novou publikaci se zpětnými změnami, ale změny se nezveřejní. Před publikováním vrácení můžete provést další změny. (Automatic Translation)
