--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_da.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_da.properties
@@ -7477,6 +7477,7 @@ retry-jitter=Prøv Jitter igen (Automatic Translation)
 retry-jitter-help=Angiv som sand for at tilføje et jitter (yderligere tilfældig ventetid) for opkald, der skal foretages igen. (Automatic Translation)
 retry-timeout=Prøv at få timeout igen (Automatic Translation)
 retry-timeout-description=Angiv den tid i sekunder, anmodninger skal blokeres, når grænsen for mislykkede forsøg er tilladt. (Automatic Translation)
+reverse-object-relationships-cannot-be-updated=Reverse object relationships cannot be updated. (Automatic Copy)
 revert-and-create-publication=Genklang og opret publikation (Automatic Translation)
 revert-your-changes-to-production-immediately=Vend straks ændringerne tilbage til produktionen. (Automatic Translation)
 reverting-creates-a-new-publication-with-the-reverted-changes=Hvis du vender tilbage, oprettes der en ny publikation med de genvendte ændringer, men ændringerne udgives ikke. Du kan foretage yderligere ændringer, før du udgiver gendannelsen. (Automatic Translation)
