--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_de.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_de.properties
@@ -7477,6 +7477,7 @@ retry-jitter=Wiederholungsversuch Jitter
 retry-jitter-help=Wird auf "true" gesetzt, um einen Jitter (zusätzliches zufälliges Warten) für Wiederholungsaufrufe hinzuzufügen.
 retry-timeout=Zeitüberschreitung für Wiederholung
 retry-timeout-description=Legen Sie die Zeit in Sekunden fest, die ein Benutzer warten muss, bevor er eine fehlgeschlagene Anmeldung wiederholen kann.
+reverse-object-relationships-cannot-be-updated=Reverse object relationships cannot be updated. (Automatic Copy)
 revert-and-create-publication=Publikation wiederherstellen und erstellen
 revert-your-changes-to-production-immediately=Ihre Änderungen an der Produktion sofort rückgängig machen.
 reverting-creates-a-new-publication-with-the-reverted-changes=Die Wiederherstellung erstellt eine neue Publikation mit den wiederhergestellten Änderungen, veröffentlicht aber nicht die Änderungen. Sie können vor der Veröffentlichung der Wiederherstellung zusätzliche Änderungen vornehmen.
