--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_el.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_el.properties
@@ -7477,6 +7477,7 @@ retry-jitter=Ράις Τζίτερ (Automatic Translation)
 retry-jitter-help=Ορίστε την αληθή για να προσθέσετε ένα jitter (πρόσθετη τυχαία αναμονή) για κλήσεις επανάληψης. (Automatic Translation)
 retry-timeout=Επανάληψη χρονικού άουτ (Automatic Translation)
 retry-timeout-description=Ορίστε το χρόνο σε δευτερόλεπτα για να αποκλείσετε αιτήσεις αφού φτάσετε στο όριο για επιτρεπόμενες αποτυχημένες προσπάθειες. (Automatic Translation)
+reverse-object-relationships-cannot-be-updated=Reverse object relationships cannot be updated. (Automatic Copy)
 revert-and-create-publication=Επαναφορά και δημιουργία δημοσίευσης (Automatic Translation)
 revert-your-changes-to-production-immediately=Επαναφέρετε τις αλλαγές σας στην παραγωγή αμέσως. (Automatic Translation)
 reverting-creates-a-new-publication-with-the-reverted-changes=Η επαναφορά δημιουργεί μια νέα δημοσίευση με τις αλλαγές που έχουν επιστραφεί, αλλά δεν δημοσιεύει τις αλλαγές. Μπορείτε να κάνετε πρόσθετες αλλαγές πριν από τη δημοσίευση της επαναφοράς. (Automatic Translation)
