--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_es.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_es.properties
@@ -7477,6 +7477,7 @@ retry-jitter=Fluctuación de reintentos
 retry-jitter-help=Establezca esta opción en «true» para añadir una fluctuación (espera aleatoria adicional) a los reintentos de llamadas.
 retry-timeout=Tiempo de espera de reintentos
 retry-timeout-description=Defina el tiempo (en segundos) en que se bloquearán las peticiones después de alcanzar el límite de intentos incorrectos permitidos.
+reverse-object-relationships-cannot-be-updated=Reverse object relationships cannot be updated. (Automatic Copy)
 revert-and-create-publication=Revertir y crear publicación
 revert-your-changes-to-production-immediately=Revierta los cambios a producción de inmediato.
 reverting-creates-a-new-publication-with-the-reverted-changes=Al revertir, se creará una nueva publicación con los cambios revertidos, pero no se publicarán los cambios. Puede realizar otros cambios antes de publicar los cambios revertidos.
