--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_et.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_et.properties
@@ -7477,6 +7477,7 @@ retry-jitter=Proovi jitterit uuesti (Automatic Translation)
 retry-jitter-help=Seadke truuks, et lisada uuesti kõnedele värinat (täiendav juhuslik ootamine). (Automatic Translation)
 retry-timeout=Proovi ajalõppu uuesti (Automatic Translation)
 retry-timeout-description=Seadke aeg sekundites, et blokeerida taotlused pärast nurjunud katsete lubatud limiidi saavutamist. (Automatic Translation)
+reverse-object-relationships-cannot-be-updated=Reverse object relationships cannot be updated. (Automatic Copy)
 revert-and-create-publication=Publikatsiooni ennistamine ja loomine (Automatic Translation)
 revert-your-changes-to-production-immediately=Taastage muudatused tootmises kohe. (Automatic Translation)
 reverting-creates-a-new-publication-with-the-reverted-changes=Ennistamine loob uue publikatsiooni, millel on taastatud muudatused, kuid ei avalda muudatusi. Enne ennise avaldamist saate teha täiendavaid muudatusi. (Automatic Translation)
