--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fa.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fa.properties
@@ -7477,6 +7477,7 @@ retry-jitter=دوباره جیتر (Automatic Translation)
 retry-jitter-help=تنظیم به درست برای اضافه کردن jitter (اضافی تصادفی صبر کنید) برای تماس های دوباره. (Automatic Translation)
 retry-timeout=تایم آوت دوباره (Automatic Translation)
 retry-timeout-description=تعیین زمان در ثانیه برای جلوگیری از درخواست ها پس از رسیدن به حد برای تلاش های شکست خورده مجاز است. (Automatic Translation)
+reverse-object-relationships-cannot-be-updated=Reverse object relationships cannot be updated. (Automatic Copy)
 revert-and-create-publication=بازگشت و ایجاد انتشار (Automatic Translation)
 revert-your-changes-to-production-immediately=تغییر خود را به تولید بلافاصله برگردانید. (Automatic Translation)
 reverting-creates-a-new-publication-with-the-reverted-changes=Reverting یک نشریه جدید با تغییرات بازگشتی ایجاد می کند، اما تغییرات را منتشر نمی کند. شما می توانید قبل از انتشار بازگشت تغییرات اضافی ایجاد کنید. (Automatic Translation)
