--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fi.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fi.properties
@@ -7477,6 +7477,7 @@ retry-jitter=Yritä Jitteriä Uudelleen
 retry-jitter-help=Aseta arvoon tosi lisätäksesi jitterin (satunnainen lisäodotus) uudelleenyrityskutsuille.
 retry-timeout=Uudelleenyrityksen Aikakatkaisu
 retry-timeout-description=Aseta sekunteina aika pyyntöjen estämiselle kun on saavutettu sallittujen epäonnistuneiden kirjautumisyritysten raja.
+reverse-object-relationships-cannot-be-updated=Reverse object relationships cannot be updated. (Automatic Copy)
 revert-and-create-publication=Palauta ja Luo Julkaisu
 revert-your-changes-to-production-immediately=Palauta tuotannon muutoksesi välittömästi.
 reverting-creates-a-new-publication-with-the-reverted-changes=Muutosten peruuttaminen luo uuden julkaisun, joka sisältää peruutetut muutokset, mutta se ei julkaise muutoksia. Voit tehdä lisää muutoksia ennen kuin julkaiset peruutetun.
