--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_gl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_gl.properties
@@ -7477,6 +7477,7 @@ retry-jitter=Retry Jitter (Automatic Copy)
 retry-jitter-help=Set to true to add a jitter (additional random wait) for retry calls. (Automatic Copy)
 retry-timeout=Tempo límite para novas tentativas
 retry-timeout-description=Set the time in seconds to block requests after reaching the limit for failed attempts allowed. (Automatic Copy)
+reverse-object-relationships-cannot-be-updated=Reverse object relationships cannot be updated. (Automatic Copy)
 revert-and-create-publication=Revert and Create Publication (Automatic Copy)
 revert-your-changes-to-production-immediately=Revert your changes to production immediately. (Automatic Copy)
 reverting-creates-a-new-publication-with-the-reverted-changes=Reverting creates a new publication with the reverted changes, but does not publish the changes. You can make additional changes before publishing the revert. (Automatic Copy)
