--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hu.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hu.properties
@@ -7477,6 +7477,7 @@ retry-jitter=Újrapróbálkozás jitter
 retry-jitter-help=Állítsa igaz értékre, ha jittert (további véletlenszerű várakozást) kíván hozzáadni az hívás újrapróbálkozásainál.
 retry-timeout=Újrapróbálkozás időtúllépése
 retry-timeout-description=Állítsa be a sikertelen belépési kísérletek határa elérése utáni időt másodpercben a kérelmek letiltásához.
+reverse-object-relationships-cannot-be-updated=Reverse object relationships cannot be updated. (Automatic Copy)
 revert-and-create-publication=Visszaállítás és a publikáció létrehozása
 revert-your-changes-to-production-immediately=Azonnal állítsa vissza a termelési módosításait.
 reverting-creates-a-new-publication-with-the-reverted-changes=A visszaállítás új publikációt hoz létre visszaállított változásokkal, de a változásokat nem teszi közzé. A visszaállítás közzététele előtt további változásokat végezhet.
