--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_in.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_in.properties
@@ -7477,6 +7477,7 @@ retry-jitter=Coba lagi Jitter (Automatic Translation)
 retry-jitter-help=Atur ke true untuk menambahkan jitter (penantian acak tambahan) untuk mencoba kembali panggilan. (Automatic Translation)
 retry-timeout=Coba lagi Waktu Habis (Automatic Translation)
 retry-timeout-description=Atur waktu dalam hitungan detik untuk memblokir permintaan setelah mencapai batas untuk upaya gagal yang diizinkan. (Automatic Translation)
+reverse-object-relationships-cannot-be-updated=Reverse object relationships cannot be updated. (Automatic Copy)
 revert-and-create-publication=Kembalikan dan Buat Publikasi (Automatic Translation)
 revert-your-changes-to-production-immediately=Kembalikan perubahan Anda ke produksi segera. (Automatic Translation)
 reverting-creates-a-new-publication-with-the-reverted-changes=Kembali membuat publikasi baru dengan perubahan yang dikembalikan, tetapi tidak menerbitkan perubahan. Anda bisa membuat perubahan tambahan sebelum memublikasikan kembali. (Automatic Translation)
