--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_it.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_it.properties
@@ -7477,6 +7477,7 @@ retry-jitter=Riprova jitter (Automatic Translation)
 retry-jitter-help=Impostare su true per aggiungere un jitter (attesa casuale aggiuntiva) per riprovare le chiamate. (Automatic Translation)
 retry-timeout=Timeout tentativi (Automatic Translation)
 retry-timeout-description=Impostare il tempo in secondi per bloccare le richieste dopo aver raggiunto il limite per i tentativi non riusciti consentiti. (Automatic Translation)
+reverse-object-relationships-cannot-be-updated=Reverse object relationships cannot be updated. (Automatic Copy)
 revert-and-create-publication=Ripristinare e creare la pubblicazione (Automatic Translation)
 revert-your-changes-to-production-immediately=Ripristinare immediatamente le modifiche alla produzione. (Automatic Translation)
 reverting-creates-a-new-publication-with-the-reverted-changes=L'operazione di ripristino crea una nuova pubblicazione con le modifiche ripristinate, ma non pubblica le modifiche. È possibile apportare ulteriori modifiche prima di pubblicare il ripristino. (Automatic Translation)
