--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ja.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ja.properties
@@ -7477,6 +7477,7 @@ retry-jitter=再試行のジッター
 retry-jitter-help=true に設定すると、再試行の呼び出しにジッター (追加のランダム待機時間) が追加されます。
 retry-timeout=再試行タイムアウト
 retry-timeout-description=ユーザーがログインを再試行できるようになるまでの待ち時間を秒単位で設定します。
+reverse-object-relationships-cannot-be-updated=Reverse object relationships cannot be updated. (Automatic Copy)
 revert-and-create-publication=公開を復元して作成
 revert-your-changes-to-production-immediately=復元した内容をすぐに本番に反映します。
 reverting-creates-a-new-publication-with-the-reverted-changes=復元すると復元した変更を含む新しい公開が作成されますが、その変更が公開されることはありません。
