--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ko.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ko.properties
@@ -7477,6 +7477,7 @@ retry-jitter=재시도 지터 (Automatic Translation)
 retry-jitter-help=다시 시도 호출에 대한 지터 (추가 임의 대기)를 추가하도록 true로 설정합니다. (Automatic Translation)
 retry-timeout=시간 다시 시간 다시 (Automatic Translation)
 retry-timeout-description=실패한 시도의 한계에 도달한 후 요청을 차단하는 데 몇 초 만에 시간을 설정합니다. (Automatic Translation)
+reverse-object-relationships-cannot-be-updated=Reverse object relationships cannot be updated. (Automatic Copy)
 revert-and-create-publication=게시 되돌리기 및 만들기 (Automatic Translation)
 revert-your-changes-to-production-immediately=변경 내용을 즉시 되돌릴 수 있습니다. (Automatic Translation)
 reverting-creates-a-new-publication-with-the-reverted-changes=되돌리기는 되돌린 변경 내용으로 새 발행물을 만들지만 변경 내용을 게시하지는 않습니다. 되돌리기 전에 추가 변경을 수행할 수 있습니다. (Automatic Translation)
