--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_lt.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_lt.properties
@@ -7477,6 +7477,7 @@ retry-jitter=Kartoti Jitter (Automatic Translation)
 retry-jitter-help=Nustatykite kaip teisinga, kad įtrauktumėte drebulį (papildomą atsitiktinį laukimą) pakartotiniams skambučiams. (Automatic Translation)
 retry-timeout=Kartoti skirtį laiką (Automatic Translation)
 retry-timeout-description=Nustatykite laiką sekundėmis, kad blokuotumėte užklausas pasiekę leidžiamų nepavykusių bandymų ribą. (Automatic Translation)
+reverse-object-relationships-cannot-be-updated=Reverse object relationships cannot be updated. (Automatic Copy)
 revert-and-create-publication=Grąžinti ir kurti leidinį (Automatic Translation)
 revert-your-changes-to-production-immediately=Nedelsdami grąžinkite gamybos pakeitimus. (Automatic Translation)
 reverting-creates-a-new-publication-with-the-reverted-changes=Reversas sukuria naują leidinį su grąžintais pakeitimais, bet neprasiskubliuoja keitimų. Prieš publikuodami sugrįžimą, galite atlikti papildomus keitimus. (Automatic Translation)
