--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ms.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ms.properties
@@ -7477,6 +7477,7 @@ retry-jitter=Cuba Semula Jitter (Automatic Translation)
 retry-jitter-help=Tetapkan untuk benar untuk menambah jitter (tunggu rawak tambahan) untuk panggilan cuba semula. (Automatic Translation)
 retry-timeout=Cuba Semula Timeout (Automatic Translation)
 retry-timeout-description=Tetapkan masa dalam beberapa saat untuk menyekat permintaan selepas mencapai had untuk percubaan gagal dibenarkan. (Automatic Translation)
+reverse-object-relationships-cannot-be-updated=Reverse object relationships cannot be updated. (Automatic Copy)
 revert-and-create-publication=Kembali dan Buat Penerbitan (Automatic Translation)
 revert-your-changes-to-production-immediately=Kembalikan perubahan anda kepada pengeluaran dengan serta-merta. (Automatic Translation)
 reverting-creates-a-new-publication-with-the-reverted-changes=Berbalik mencipta penerbitan baru dengan perubahan yang dikembalikan, tetapi tidak menerbitkan perubahan. Anda boleh membuat perubahan tambahan sebelum menerbitkan kembali. (Automatic Translation)
