--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nb.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nb.properties
@@ -7477,6 +7477,7 @@ retry-jitter=Prøv jitter på nytt (Automatic Translation)
 retry-jitter-help=Sett til sann for å legge til en jitter (ekstra tilfeldig venting) for nye forsøk. (Automatic Translation)
 retry-timeout=Tidsavbrudd for nytt forsøk (Automatic Translation)
 retry-timeout-description=Angi tiden i sekunder for å blokkere forespørsler etter å ha nådd grensen for mislykkede tillatte forsøk. (Automatic Translation)
+reverse-object-relationships-cannot-be-updated=Reverse object relationships cannot be updated. (Automatic Copy)
 revert-and-create-publication=Tilbakestil og opprett utgivelse
 revert-your-changes-to-production-immediately=Tilbakestill endringene til produksjonen umiddelbart. (Automatic Translation)
 reverting-creates-a-new-publication-with-the-reverted-changes=Tilbakestilling oppretter en ny utgivelse med de tilbakestilte endringene uten å publisere disse. Du kan gjøre tilleggendringer før du publiserer tilbakestillingen.
