--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nl.properties
@@ -7477,6 +7477,7 @@ retry-jitter=Jitter bij nieuwe pogingen
 retry-jitter-help=Stel in op waar om een jitter (bijkomende willekeurige wachttijd) toe te voegen voor nieuwe oproeppogingen.
 retry-timeout=Tijd voor nieuwe poging
 retry-timeout-description=Stel de tijd in seconden in om aanvragen te blokkeren nadat de limiet voor mislukte pogingen werd bereikt.
+reverse-object-relationships-cannot-be-updated=Reverse object relationships cannot be updated. (Automatic Copy)
 revert-and-create-publication=Publicatie terugdraaien en maken
 revert-your-changes-to-production-immediately=Zet uw wijzigingen onmiddellijk om in productie.
 reverting-creates-a-new-publication-with-the-reverted-changes=De actie 'terugdraaien' maakt een nieuwe publicatie met de teruggedraaide wijzigingen, maar publiceert de wijzigingen niet. U kunt bijkomende wijzigingen maken voorafgaand aan de publicatie van de teruggedraaide versie.
