--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pl.properties
@@ -7477,6 +7477,7 @@ retry-jitter=Ponów jitter (Automatic Translation)
 retry-jitter-help=Ustaw wartość true, aby dodać trema (dodatkowe losowe oczekiwanie) dla ponowienia połączeń. (Automatic Translation)
 retry-timeout=Ponów limit czasu (Automatic Translation)
 retry-timeout-description=Ustaw czas w sekundach, aby zablokować żądania po osiągnięciu limitu dla nieudanych prób dozwolone. (Automatic Translation)
+reverse-object-relationships-cannot-be-updated=Reverse object relationships cannot be updated. (Automatic Copy)
 revert-and-create-publication=Przywróć i utwórz publikację (Automatic Translation)
 revert-your-changes-to-production-immediately=Natychmiast przywróć zmiany w produkcji. (Automatic Translation)
 reverting-creates-a-new-publication-with-the-reverted-changes=Przywracanie tworzy nową publikację z przywróconymi zmianami, ale nie publikuje zmian. Przed opublikowaniem revert można wprowadzić dodatkowe zmiany. (Automatic Translation)
