--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_BR.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_BR.properties
@@ -7477,6 +7477,7 @@ retry-jitter=Nova tentativa de Jitter
 retry-jitter-help=Definir como verdadeiro para adicionar jitter (espera aleatória adicional) para novas tentativas de chamadas.
 retry-timeout=Tempo limite para novas tentativas
 retry-timeout-description=Definir o tempo em segundos para o bloqueio de solicitações depois do limite de tentativas mal sucedidas permitidas ser alcançado.
+reverse-object-relationships-cannot-be-updated=Reverse object relationships cannot be updated. (Automatic Copy)
 revert-and-create-publication=Reverter e criar publicação
 revert-your-changes-to-production-immediately=Reverta suas alterações para produção imediata.
 reverting-creates-a-new-publication-with-the-reverted-changes=Ao reverter, uma nova publicação é criada com as modificações revertidas, mas não publica as modificações. Você pode realizar modificações adicionais antes de publicar a reversão.
