--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_PT.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_PT.properties
@@ -7477,6 +7477,7 @@ retry-jitter=Jitter de repetição (Automatic Translation)
 retry-jitter-help=Definido como true para adicionar um tremor (espera aleatória adicional) para chamadas de repetição. (Automatic Translation)
 retry-timeout=Rejuldando timeout (Automatic Translation)
 retry-timeout-description=Defina o tempo em segundos para bloquear as solicitações depois de atingir o limite de tentativas fracassadas permitidas. (Automatic Translation)
+reverse-object-relationships-cannot-be-updated=Reverse object relationships cannot be updated. (Automatic Copy)
 revert-and-create-publication=Reverter e Criar Publicação (Automatic Translation)
 revert-your-changes-to-production-immediately=Reverta suas mudanças na produção imediatamente. (Automatic Translation)
 reverting-creates-a-new-publication-with-the-reverted-changes=Reverter cria uma nova publicação com as mudanças revertidas, mas não publica as mudanças. Você pode fazer alterações adicionais antes de publicar o reverso. (Automatic Translation)
