--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ru.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ru.properties
@@ -7477,6 +7477,7 @@ retry-jitter=Повторить jitter (Automatic Translation)
 retry-jitter-help=Установите на верно, чтобы добавить испуг (дополнительное случайное ожидание) для повторного попытки вызовов. (Automatic Translation)
 retry-timeout=Повторить тайм-аут (Automatic Translation)
 retry-timeout-description=Установите время в секундах, чтобы заблокировать запросы после достижения предела для неудачных попыток разрешено. (Automatic Translation)
+reverse-object-relationships-cannot-be-updated=Reverse object relationships cannot be updated. (Automatic Copy)
 revert-and-create-publication=Возврат и создание публикации (Automatic Translation)
 revert-your-changes-to-production-immediately=Немедленно верните свои изменения в производство. (Automatic Translation)
 reverting-creates-a-new-publication-with-the-reverted-changes=Возврат создает новую публикацию с возвращенными изменениями, но не публикует изменения. Вы можете внести дополнительные изменения перед публикацией revert. (Automatic Translation)
