--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sk.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sk.properties
@@ -7477,6 +7477,7 @@ retry-jitter=Zopakovať chvenie (Automatic Translation)
 retry-jitter-help=Nastavte hodnotu true na pridanie chvenia (ďalšie náhodné čakanie) na opakovanie hovorov. (Automatic Translation)
 retry-timeout=Časový limit znova (Automatic Translation)
 retry-timeout-description=Nastavte čas v sekundách na blokovanie požiadaviek po dosiahnutí limitu pre povolené neúspešné pokusy. (Automatic Translation)
+reverse-object-relationships-cannot-be-updated=Reverse object relationships cannot be updated. (Automatic Copy)
 revert-and-create-publication=Vrátiť a vytvoriť publikáciu (Automatic Translation)
 revert-your-changes-to-production-immediately=Okamžite sa vrátiť k zmenám vo výrobe. (Automatic Translation)
 reverting-creates-a-new-publication-with-the-reverted-changes=Vrátením sa vytvorí nová publikácia s vrátenými zmenami, ale zmeny sa nezverejnia. Pred publikovaním opätovnej zmeny môžete vykonať ďalšie zmeny. (Automatic Translation)
