--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sv.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sv.properties
@@ -7477,6 +7477,7 @@ retry-jitter=Försök jitter igen
 retry-jitter-help=Ange som sant för att lägga till jitter (ytterligare slumpmässig väntetid) för att försöka anropa igen.
 retry-timeout=Timeout för omförsök
 retry-timeout-description=Ange tid i sekunder som en användare kan vänta innan hen försöker igen efter misslyckad inloggning.
+reverse-object-relationships-cannot-be-updated=Reverse object relationships cannot be updated. (Automatic Copy)
 revert-and-create-publication=Återställ och skapa publicering
 revert-your-changes-to-production-immediately=Återställ dina ändringar till produktion direkt.
 reverting-creates-a-new-publication-with-the-reverted-changes=Återställning skapar en ny publicering med de återställda ändringarna, utan att publicera ändringarna. Du kan göra fler ändringar innan återställningen publiceras.
