--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_tr.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_tr.properties
@@ -7477,6 +7477,7 @@ retry-jitter=Titremeyi Yeniden Dene (Automatic Translation)
 retry-jitter-help=Yeniden deneme çağrıları için bir titreme (ek rasgele bekleme) eklemek için true olarak ayarlayın. (Automatic Translation)
 retry-timeout=Zaman Aşımı'yı Yeniden Dene (Automatic Translation)
 retry-timeout-description=İzin verilen başarısız denemeler sınırına ulaştıktan sonra istekleri engellemek için süreyi saniyeler içinde ayarlayın. (Automatic Translation)
+reverse-object-relationships-cannot-be-updated=Reverse object relationships cannot be updated. (Automatic Copy)
 revert-and-create-publication=Yayını Geri Ve Oluştur (Automatic Translation)
 revert-your-changes-to-production-immediately=Değişikliklerinizi üretime hemen geri alın. (Automatic Translation)
 reverting-creates-a-new-publication-with-the-reverted-changes=Geri döndürülme, ters çevrilmiş değişikliklerle birlikte yeni bir yayın oluşturur, ancak değişiklikleri yayımlamaz. Geri dönüşü yayımlamadan önce ek değişiklikler yapabilirsiniz. (Automatic Translation)
