--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_uk.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_uk.properties
@@ -7477,6 +7477,7 @@ retry-jitter=Повторна коливання (Automatic Translation)
 retry-jitter-help=Встановіть значення true, щоб додати коливання (додаткове випадкове очікування) для повторних викликів. (Automatic Translation)
 retry-timeout=Час очікування повторення (Automatic Translation)
 retry-timeout-description=Встановіть час у секундах, щоб заблокувати запити після досягнення ліміту для невдалих спроб. (Automatic Translation)
+reverse-object-relationships-cannot-be-updated=Reverse object relationships cannot be updated. (Automatic Copy)
 revert-and-create-publication=Повернути та створити публікацію (Automatic Translation)
 revert-your-changes-to-production-immediately=Негайно повернути зміни до виробництва. (Automatic Translation)
 reverting-creates-a-new-publication-with-the-reverted-changes=Повернення створює нову публікацію з відтвореними змінами, але не публікує зміни. Перед публікацією повернутися можна внести додаткові зміни. (Automatic Translation)
