--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_vi.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_vi.properties
@@ -7477,6 +7477,7 @@ retry-jitter=Thử lại Jitter (Automatic Translation)
 retry-jitter-help=Đặt thành true để thêm jitter (chờ ngẫu nhiên bổ sung) cho các cuộc gọi thử lại. (Automatic Translation)
 retry-timeout=Thời gian chờ Thử lại (Automatic Translation)
 retry-timeout-description=Đặt thời gian trong vài giây để chặn yêu cầu sau khi đạt đến giới hạn cho các lần thử không thành công được phép. (Automatic Translation)
+reverse-object-relationships-cannot-be-updated=Reverse object relationships cannot be updated. (Automatic Copy)
 revert-and-create-publication=Hoàn nguyên và Tạo Ấn phẩm (Automatic Translation)
 revert-your-changes-to-production-immediately=Trở lại thay đổi của bạn để sản xuất ngay lập tức. (Automatic Translation)
 reverting-creates-a-new-publication-with-the-reverted-changes=Hoàn nguyên tạo ra một ấn phẩm mới với những thay đổi hoàn nguyên, nhưng không xuất bản những thay đổi. Bạn có thể thực hiện thay đổi bổ sung trước khi xuất bản hoàn nguyên. (Automatic Translation)
