--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_CN.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_CN.properties
@@ -7477,6 +7477,7 @@ retry-jitter=重试抖动
 retry-jitter-help=设置为 true 以对重试调用添加抖动（额外的随机等待）。
 retry-timeout=重试超时
 retry-timeout-description=以秒为单位设置达到允许的失败尝试次数限制后阻止请求的时长。
+reverse-object-relationships-cannot-be-updated=Reverse object relationships cannot be updated. (Automatic Copy)
 revert-and-create-publication=撤消并创建发布
 revert-your-changes-to-production-immediately=立即将变更还原到生产。
 reverting-creates-a-new-publication-with-the-reverted-changes=撤消会创建一个拥有撤消变更的新发布，但不会发布变更。您可以在发布撤消前进行其他变更。
