--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fr_CA.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fr_CA.properties
@@ -7477,6 +7477,7 @@ retry-jitter=Réessayer la gigue
 retry-jitter-help=Régler sur vrai pour ajouter une gigue (attente aléatoire supplémentaire) pour les appels de nouvelle tentative.
 retry-timeout=Délai avant nouvelle tentative
 retry-timeout-description=Définissez le délai en secondes avant qu'un utilisateur puisse réessayer de se connecter suite à un échec.
+reverse-object-relationships-cannot-be-updated=Reverse object relationships cannot be updated. (Automatic Copy)
 revert-and-create-publication=Annuler et créer la publication
 revert-your-changes-to-production-immediately=Annuler immédiatement vos modifications en production.
 reverting-creates-a-new-publication-with-the-reverted-changes=Annuler crée une nouvelle publication dont les modifications ont été annulées, mais ne publie pas les modifications en question. Vous pouvez apporter d'autres modifications avant de publier le contenu avec annulation.
