--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hi_IN.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hi_IN.properties
@@ -7477,6 +7477,7 @@ retry-jitter=फिर से प्रयास जिटर (Automatic Transla
 retry-jitter-help=रीट्री कॉल के लिए एक नर्वस (अतिरिक्त यादृच्छिक प्रतीक्षा) जोड़ने के लिए सही करें। (Automatic Translation)
 retry-timeout=पुनः प्रयास मध्यांतर (Automatic Translation)
 retry-timeout-description=अनुमति दिए गए असफल प्रयासों के लिए सीमा तक पहुंचने के बाद अनुरोधों को ब्लॉक करने के लिए सेकंड में समय निर्धारित करें। (Automatic Translation)
+reverse-object-relationships-cannot-be-updated=Reverse object relationships cannot be updated. (Automatic Copy)
 revert-and-create-publication=सुधार और प्रकाशन बनाएँ
 revert-your-changes-to-production-immediately=उत्पादन में अपने परिवर्तनों को तुरंत वापस लाएं।
 reverting-creates-a-new-publication-with-the-reverted-changes=रिवर्टिंग उलटे हुए परिवर्तनों के साथ एक नया प्रकाशन बनाता है, लेकिन परिवर्तनों को प्रकाशित नहीं करता है। आप रिवर्ट प्रकाशित करने से पहले अतिरिक्त परिवर्तन कर सकते हैं।
