--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_iw.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_iw.properties
@@ -7477,6 +7477,7 @@ retry-jitter=נסה שוב להתעצבן (Automatic Translation)
 retry-jitter-help=הגדר כ- True כדי להוסיף עצבנות (המתנה אקראית נוספת) עבור שיחות ניסיון חוזר. (Automatic Translation)
 retry-timeout=זמן קצוב לניסיון חוזר (Automatic Translation)
 retry-timeout-description=הגדר את השעה בשניות לחסימת בקשות לאחר הגעה למגבלה עבור ניסיונות כושלים המותרים. (Automatic Translation)
+reverse-object-relationships-cannot-be-updated=Reverse object relationships cannot be updated. (Automatic Copy)
 revert-and-create-publication=חזור וצור פרסום (Automatic Translation)
 revert-your-changes-to-production-immediately=החזר את השינויים להפקה באופן מיידי. (Automatic Translation)
 reverting-creates-a-new-publication-with-the-reverted-changes=חזרה יוצרת פרסום חדש עם השינויים שהוחזרו, אך אינה מפרסמת את השינויים. באפשרותך לבצע שינויים נוספים לפני פרסום החזור. (Automatic Translation)
