--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ro.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ro.properties
@@ -7477,6 +7477,7 @@ retry-jitter=Reîncerca jitter (Automatic Translation)
 retry-jitter-help=Setați la true pentru a adăuga o agitație (așteptare aleatorie suplimentară) pentru reîncercarea apelurilor. (Automatic Translation)
 retry-timeout=Reîncercare expirare (Automatic Translation)
 retry-timeout-description=Setați timpul în secunde pentru a bloca solicitările după atingerea limitei pentru încercările nereușite permise. (Automatic Translation)
+reverse-object-relationships-cannot-be-updated=Reverse object relationships cannot be updated. (Automatic Copy)
 revert-and-create-publication=Revenire și creare publicație (Automatic Translation)
 revert-your-changes-to-production-immediately=Reveniți imediat modificările la producție. (Automatic Translation)
 reverting-creates-a-new-publication-with-the-reverted-changes=Revenirea creează o publicație nouă cu modificările returnate, dar nu publică modificările. Aveți posibilitatea să efectuați modificări suplimentare înainte de a publica revenirea. (Automatic Translation)
