--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sl.properties
@@ -7477,6 +7477,7 @@ retry-jitter=Znova poskusite tremo (Automatic Translation)
 retry-jitter-help=Nastavite na true, da dodate tremo (dodatno naključno čakanje) za klice, ki se znova ujemajo. (Automatic Translation)
 retry-timeout=Znova poskusite časovno izmik (Automatic Translation)
 retry-timeout-description=Nastavite čas v nekaj sekundah, da blokirate zahteve, potem ko dosežete omejitev za neuspele poskuse dovoljenih. (Automatic Translation)
+reverse-object-relationships-cannot-be-updated=Reverse object relationships cannot be updated. (Automatic Copy)
 revert-and-create-publication=Vrni in ustvari publikacijo (Automatic Translation)
 revert-your-changes-to-production-immediately=Takoj povrnite spremembe v proizvodnji. (Automatic Translation)
 reverting-creates-a-new-publication-with-the-reverted-changes=Vrnitev ustvari novo publikacijo s spremenjenimi spremembami, vendar ne objavi sprememb. Pred objavo ovrnitve lahko naredite dodatne spremembe. (Automatic Translation)
